--- a/index.html
+++ b/index.html
@@ -1,46 +1,197 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>таблицы в html</title>
+        <title>table</title>
         <meta charset="utf-8">
     </head>
     <body>
-        <table border="1">
-            <tr>
-            <th>
-                Об'єм обробки
-            </th> 
-            <th>
-                Норма витрати препарату, мл/10Л
-            </th>
-            <th>
-                Норма витрати препарату, л/сотку
-            </th>
-            <th>
-                Шкідливі об'єкти
-            </th>
-            <tr><td>Картопля</td><td>60-80</td><td>до 5 л.</td><td>Однорічні дводольні та злакові бур'яни</td></tr>
-            <tr><td>Морква</td><td>40-60</td><td>до 5 л.</td><td>Однорічні дводольні та злакові бур'яни</td></tr>
+        <table 
+            border="1" 
+            align="center" 
+            width="90%"
+        >
+            <thead>
+                <tr>
+                    <th>
+                        Об'єм обробки
+                    </th> 
+                    <th>
+                        Норма витрати препарату, мл/10Л
+                    </th>
+                    <th>
+                        Норма витрати препарату, л/сотку
+                    </th>
+                    <th>
+                        Шкідливі об'єкти
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        Картопля
+                    </td>
+                    <td>
+                        60-80
+                    </td>
+                    <td>
+                        до 5 л.
+                    </td>
+                    <td>
+                        Однорічні дводольні та злакові бур'яни
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Морква
+                    </td>
+                    <td>
+                        40-60
+                    </td>
+                    <td>
+                        до 5 л.
+                    </td>
+                    <td>
+                        Однорічні дводольні та злакові бур'яни
+                    </td>
+                </tr>
+            </tbody>
         </table>
         </br>
-            <table border="1">
-                <th>
-                    Культура
-                </th> 
-                <th>
-                     Бур'яни
-                </th>
-                <th>
-                    Норма витрати препарату, л/га
-                </th>
-                <th>
-                    Строки обробки
-                </th>
-                <tr><td>Ріпак</td><td>Однорічні</td><td>2-3</td><td>Однорічні дводольні та злакові бур'яни</td></tr>
-                <tr><td>Томати</td><td>40-60</td><td>1-22-3</td><td>Однорічні дводольні та злакові бур'яни</td></tr>
-                <tr><td>Огірки</td><td>60-80</td><td>2-3</td><td>Однорічні дводольні та злакові бур'яни</td></tr>
-                <tr><td>Коноплі</td><td>Однорічні</td><td>1,5</td><td>Однорічні дводольні та злакові бур'яни</td></tr>
-
-            </table>
+        <table 
+            border="1" 
+            align="center" 
+            width="40%"
+        >
+            <thead>
+                <tr>
+                    <th>
+                        Культура
+                    </th> 
+                    <th>
+                        Бур'яни
+                    </th>
+                    <th>
+                        Норма витрати препарату, л/га
+                    </th>
+                    <th>
+                        Строки обробки
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <b>
+                            Ріпак
+                        </b>
+                    </td>
+                    <td>
+                        Однорічні
+                    </td>
+                    <td>
+                        2-3
+                    </td>
+                    <td>
+                        текст
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <b>
+                            Томати
+                        </b>
+                    </td>
+                    <td  rowspan="2">
+                        Однорічні та багаторічні
+                    </td>
+                    <td>
+                        1-22-3
+                    </td>
+                    <td rowspan="3">
+                        текст
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <b>
+                            Огірки
+                        </b>
+                    </td>
+                    <td>
+                        2-3
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <b>
+                            Коноплі
+                        </b>
+                    </td>
+                    <td>
+                        Однорічні
+                    </td>
+                    <td>
+                        1,5
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <br/>
+        <table 
+            border="1" 
+            align="center" 
+            cellspacing="0"
+            width="20%"
+        >
+            <thead>
+                <tr>
+                    <th>
+                        Культура
+                    </th> 
+                    <th>
+                        Спектр дії
+                    </th>
+                    <th>
+                        Норма витрати 
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        Текст
+                    </td>
+                    <td>
+                        Текст текст текст
+                    </td>
+                    <td>
+                        Текст
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Текст
+                    </td>
+                    <td>
+                        Текст
+                    </td>
+                    <td>
+                        Текст
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Текст
+                    </td>
+                    <td>
+                        Текст
+                    </td>
+                    <td>
+                        Текст
+                    </td>
+                </tr>       
+            </tbody>
+        </table>
     </body>
 </html>
